tests/snapshots/reconstruction__trace_noisy.snap
---
source: tests/reconstruction.rs
expression: "snapshot_text(trace, 1)"
---
{
  "mode": "silhouette",
  "paths": [
    {
      "id": 0,
      "bounding_box": {
        "x": 20.0,
        "y": 20.1,
        "width": 24.1,
        "height": 23.9
      },
      "area": 574.6,
      "fill_colour": "#000000"
    },
    {
      "id": 1,
      "bounding_box": {
        "x": 6.0,
        "y": 6.0,
        "width": 5.0,
        "height": 5.0
      },
      "area": 25.0,
      "fill_colour": "#000000"
    },
    {
      "id": 2,
      "bounding_box": {
        "x": 12.0,
        "y": 6.0,
        "width": 5.0,
        "height": 5.0
      },
      "area": 25.0,
      "fill_colour": "#000000"
    },
    {
      "id": 3,
      "bounding_box": {
        "x": 18.0,
        "y": 6.0,
        "width": 5.0,
        "height": 5.0
      },
      "area": 25.0,
      "fill_colour": "#000000"
    }
  ],
  "bounding_box": {
    "x": 6.0,
    "y": 6.0,
    "width": 53.0,
    "height": 53.0
  },
  "path_count": 37
}
