tests/snapshots/reconstruction__trace_radial_gradient.snap
---
source: tests/reconstruction.rs
expression: trace_golden(aware)
---
{
  "mode": "colour",
  "paths": [
    {
      "id": 0,
      "bounding_box": {
        "x": 10.1,
        "y": 10.2,
        "width": 44.2,
        "height": 44.0
      },
      "area": 1942.1,
      "fill_colour": null,
      "region_id": 0,
      "appearance": {
        "fill": {
          "kind": "radial_gradient",
          "centre": {
            "x": 32.2,
            "y": 32.2
          },
          "radius": 22.2,
          "stops": [
            {
              "offset": 0.0,
              "colour": "#c81e1e",
              "opacity": 1.0
            },
            {
              "offset": 1.0,
              "colour": "#2028d0",
              "opacity": 1.0
            }
          ],
          "fit": 1.0
        },
        "opacity": {
          "min": 1.0,
          "mean": 1.0,
          "max": 1.0
        }
      }
    }
  ],
  "bounding_box": {
    "x": 10.1,
    "y": 10.2,
    "width": 44.2,
    "height": 44.0
  },
  "path_count": 1
}
