tests/snapshots/reconstruction__trace_silhouette.snap
---
source: tests/reconstruction.rs
expression: "snapshot_text(trace, 1)"
---
{
  "mode": "silhouette",
  "paths": [
    {
      "id": 0,
      "bounding_box": {
        "x": 11.3,
        "y": 13.3,
        "width": 41.4,
        "height": 37.4
      },
      "area": 1545.2,
      "fill_colour": "#000000"
    }
  ],
  "bounding_box": {
    "x": 11.3,
    "y": 13.3,
    "width": 41.4,
    "height": 37.4
  },
  "path_count": 1
}
