tests/snapshots/reconstruction__trace_svg_silhouette.snap
---
source: tests/reconstruction.rs
expression: "trace[\"svg\"].as_str().expect(\"markup\")"
---
<?xml version="1.0" encoding="UTF-8"?>
<!-- Generator: visioncortex VTracer 1.0.0-alpha.4 -->
<svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="64" height="64">
<path d="M23.88,13.34c1.31-.01,2.62-.02,3.98-.02c.34,0,.34,0,2.06,.03c2.08,.02,4.15,0,6.22-.03c.66,0,.66,0,3.99,.02c1.19,0,2.39,.01,3.63,.01c4.22,.84,5.69,2.23,8.24,5.65c.65,2.87,.65,2.87,.66,6c.01,.57,.01,.57,.02,3.44c-.02,1.17-.04,2.35-.05,3.56c.01,1.18,.03,2.35,.05,3.56c0,1.14-.01,2.27-.02,3.44c0,.52,0,.52-.01,3.13C51.75,46.1,50.24,47.57,47,50c-3.24,.65-3.24,.65-6.87,.66c-1.32,.01-2.63,.02-3.99,.02c-.68-.01-1.36-.02-2.06-.03c-2.08-.02-4.15,0-6.22,.03c-.66,0-.66,0-3.98-.02c-.6,0-.6,0-3.64-.01C16.02,49.81,14.55,48.42,12,45c-.65-2.87-.65-2.87-.66-6c-.01-1.13-.02-2.27-.02-3.44c.02-1.17,.04-2.35,.06-3.56c-.02-1.18-.04-2.35-.06-3.56c0-1.14,.01-2.27,.02-3.44c0-1.03,.01-2.06,.01-3.12c1.54-6.85,6.04-8.51,12.53-8.54Z" fill="#000000"/>
</svg>
