tests/snapshots/reconstruction__trace_symmetric.snap
---
source: tests/reconstruction.rs
expression: "snapshot_text(trace, 1)"
---
{
  "mode": "silhouette",
  "paths": [
    {
      "id": 0,
      "bounding_box": {
        "x": 8.0,
        "y": 8.0,
        "width": 48.0,
        "height": 48.0
      },
      "area": 2304.0,
      "fill_colour": "#000000"
    }
  ],
  "bounding_box": {
    "x": 8.0,
    "y": 8.0,
    "width": 48.0,
    "height": 48.0
  },
  "path_count": 1
}
